--- a/app/views/board/qb.html.erb
+++ b/app/views/board/qb.html.erb
@@ -87,7 +87,7 @@
 <footer class="text-center">
 	<div class="">
     	<div class="container">
-        	<p> Team: 권현우 |  이철승 | <a href="#">김동욱</a></p>
+        	<p>오제웅</p>
         	<p>Copyright &copy; 2017 </p>
         </div>
     </div>	
